[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Difficulty.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/DifficultyImage.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/Foglihten-068.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/MochaCookies.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="Difficulty1" type="Button" parent="."]
margin_left = 415.0
margin_top = 157.0
margin_right = 619.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 150, 23 )
custom_fonts/font = SubResource( 1 )
text = "7 Days"

[node name="Difficulty2" type="Button" parent="."]
margin_left = 415.0
margin_top = 216.0
margin_right = 619.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 150, 23 )
custom_fonts/font = SubResource( 2 )
text = "14 Days"

[node name="Difficulty3" type="Button" parent="."]
margin_left = 416.0
margin_top = 274.0
margin_right = 620.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 150, 23 )
custom_fonts/font = SubResource( 3 )
text = "21 Days"

[node name="Label" type="Label" parent="."]
margin_left = 331.0
margin_top = 10.0
margin_right = 719.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "HOW LONG GET?"
align = 1
valign = 1

[connection signal="pressed" from="Difficulty1" to="." method="_on_Difficulty1_pressed"]
[connection signal="pressed" from="Difficulty2" to="." method="_on_Difficulty2_pressed"]
[connection signal="pressed" from="Difficulty3" to="." method="_on_Difficulty3_pressed"]
